set word-wrap: break-word to fix content wider than screen
fixes #146

--- a/assets/style.css
+++ b/assets/style.css
@@ -147,6 +147,7 @@ a:visited {
     margin: 0 10px 0 52px;
     display: flex;
     flex-direction: row;
+    word-wrap: break-word;
 }
 
 .paneljump {
